code cleanup: using Boolean.valueOf instead of Boolean constructor